[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sekoia-event-exporter"
version = "0.5.3"
description = "Export search job results from Sekoia.io API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE"
]
authors = [
    {name = "Sekoia.io", email = "support@sekoia.io"}
]
keywords = ["sekoia", "security", "export", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
sekoia-event-exporter = "sekoia_event_exporter:main"
see = "sekoia_event_exporter:main"

[project.urls]
Homepage = "https://github.com/sekoia-io/sekoia-event-exporter"
Documentation = "https://github.com/sekoia-io/sekoia-event-exporter#readme"
Repository = "https://github.com/sekoia-io/sekoia-event-exporter"
Issues = "https://github.com/sekoia-io/sekoia-event-exporter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sekoia_event_exporter --cov-report=term-missing"
